--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ landingai-ade==0.20.3
 psycopg2-binary>=2.9.9
 pgvector==0.2.4
 google-generativeai==0.3.1
+openai>=1.0.0
+sentence-transformers>=2.2.0
 python-dotenv==1.0.0
 pydantic>=2.5.0
 numpy>=1.24.3
